@@ -752,26 +752,26 @@ AC_CHECK_HEADER(zlib.h,
 dnl
 dnl Check for OpenMP support
 dnl
+dnl removed for now due to problems with GCC's OpenMP implementation
 
-AC_ARG_ENABLE([openmp],
-	      AC_HELP_STRING([--enable-openmp], [enable if you want OpenMP support @<:@default=no@:>@]),
-	      [want_openmp="$enableval"], [want_openmp=no])
+dnl AC_ARG_ENABLE([openmp],
+dnl 	      AC_HELP_STRING([--enable-openmp], [enable if you want OpenMP support @<:@default=no@:>@]),
+dnl 	      [want_openmp="$enableval"], [want_openmp=no])
 
-if test x$want_openmp = xyes; then
-	AX_OPENMP([
-	  gcc_version=`$CC -dumpversion`
-	  gcc_major=`echo $gcc_version | sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\1/'`
-	  gcc_minor=`echo $gcc_version | sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/'`
-	  dnl check that the gcc version is >=4.3, if we're using gcc
-	  if test ! "x$GCC" = "xyes" -o $gcc_major -ge 4 -a $gcc_minor -ge 3; then
-	    AC_DEFINE(HAVE_OPENMP,1,[Define if OpenMP is enabled])
-	    conky_CFLAGS="$conky_CFLAGS $OPENMP_CFLAGS"
-	  else
-	    want_openmp=no
-	  fi
-
-	])
-fi
+dnl if test x$want_openmp = xyes; then
+dnl 	AX_OPENMP([
+dnl 	  gcc_version=`$CC -dumpversion`
+dnl 	  gcc_major=`echo $gcc_version | sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\1/'`
+dnl 	  gcc_minor=`echo $gcc_version | sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/'`
+dnl 	  dnl check that the gcc version is >=4.3, if we're using gcc
+dnl 	  if test ! "x$GCC" = "xyes" -o $gcc_major -ge 4 -a $gcc_minor -ge 3; then
+dnl 	    AC_DEFINE(HAVE_OPENMP,1,[Define if OpenMP is enabled])
+dnl 	    conky_CFLAGS="$conky_CFLAGS $OPENMP_CFLAGS"
+dnl 	  else
+dnl 	    want_openmp=no
+dnl 	  fi
+dnl 	])
+dnl fi
 
 dnl
 dnl Check doc stuff
